tests/harness/errors/008_op_spacing.eu
#!/usr/bin/env eu

z: 1 +1
